@@ -182,6 +182,78 @@ The jars build for a distribution are in `<suite>/mxbuild/dists/jdk*/`. The modu
 where `N >= 9`. There is a modular jar built for each JDK version denoted by the `javaCompliance` values of the distribution's
 constituent projects.
 
+#### Specifying required modules
+
+If a project uses a package from a module other than `java.base` or a module
+implied by a dependency (e.g., the [`JVMCI_API` library](https://github.com/oracle/graal/blob/1655543b5670948e56333827f3a8f65e1ba8f3c6/compiler/mx.compiler/suite.py#L46-L55)
+defined by Graal), it must specify these additional modules with the `requires` attribute.
+For example:
+```
+"org.graalvm.compiler.hotspot.management.jdk11" : {
+    ...
+    "requires" : [
+        "jdk.management"
+    ],
+    "javaCompliance" : "11+",
+    ...
+},
+```
+The `requires` attribute is used for two purposes:
+* As input to the `requires` attribute of the descriptor for the module
+  encapsulating the project.
+* To derive a value for the `--limit-modules` javac option
+  which restricts the modules observable during compilation. This is required to support
+  separate compilation of projects that are part of a JDK module. For example,
+  `org.graalvm.compiler.hotspot.amd64` depends on `org.graalvm.compiler.hotspot`
+  and the classes of both these projects are contained in the `jdk.internal.vm.compiler`
+  module. When compiling `org.graalvm.compiler.hotspot.amd64`, we must compile against
+  classes in `org.graalvm.compiler.hotspot` as they might be different (i.e., newer)
+  than the classes in `jdk.internal.vm.compiler`. The value of `--limit-modules` will
+  omit `jdk.internal.vm.compiler` in this case to achieve this hiding. In the absence
+  of a `requires` attribute, only the `java.base` module is observable when compiling
+  on JDK 9+.
+
+#### Use of concealed packages
+
+Concealed packages are those defined by a module but not exported by the module.
+If a project uses concealed packages, it must specify a `requiresConcealed` attribute
+denoting the concealed packages it accesses. For example:
+```
+"org.graalvm.compiler.lir.aarch64.jdk11" : {
+    "requiresConcealed" : {
+        "jdk.internal.vm.ci" : [
+            "jdk.vm.ci.aarch64",
+            "jdk.vm.ci.code",
+        ],
+    },
+    "javaCompliance" : "11+",
+},
+```
+This will result in `--add-exports=jdk.internal.vm.ci/jdk.vm.ci.aarch64=ALL-UNNAMED` and
+`--add-exports=jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED` being added to the `javac`
+command line when the `org.graalvm.compiler.lir.aarch64.jdk11` project is compiled by a
+JDK 9+ `javac`.
+
+Note that the `requires` and `requiresConcealed` attributes only apply to projects with
+a minimum `javaCompliance` value of 9 or greater. When `javac` from jdk 9+ is used in
+conjunction with `-source 8` (as will be the case for projects with a minimum `javaCompliance`
+of 8 or less), all classes in the JDK are observable. However, if an 8 project would need a
+`requires` or `requiresConcealed` attribute were it a 9+ project, then these attributes must be
+applied to any module containing the project. For example,
+`org.graalvm.compiler.serviceprovider` has `"javaCompliance" : "8+"` and contains
+code that imports `sun.misc.Unsafe`. Since `org.graalvm.compiler.serviceprovider`
+is part of the `jdk.internal.vm.compiler` module defined by the `GRAAL` distribution,
+`GRAAL` must include a `requires` attribute in its `moduleInfo` attribute:
+```
+"GRAAL" : {
+    "moduleInfo" : {
+        "name" : "jdk.internal.vm.compiler",
+        "requires" : ["jdk.unsupported"],
+        ...
+    }
+}
+```
+
 ### Selecting JDKs
 
 Specifying JDKs to mx is done via the `--java-home` and `--extra-java-homes` options or
